host/etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Fri Jan 17 22:20:43 2020
*mangle
:PREROUTING ACCEPT [145977:40841504]
:INPUT ACCEPT [50679:9608764]
:FORWARD ACCEPT [95290:31224550]
:OUTPUT ACCEPT [44323:6665339]
:POSTROUTING ACCEPT [139613:37889889]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Jan 17 22:20:43 2020
# Generated by iptables-save v1.6.1 on Fri Jan 17 22:20:43 2020
*nat
:PREROUTING ACCEPT [8238:686699]
:INPUT ACCEPT [63:4192]
:OUTPUT ACCEPT [240:15701]
:POSTROUTING ACCEPT [524:31193]
-A PREROUTING -p tcp -m tcp --dport 8443 -j DNAT --to-destination 10.251.251.250:8443
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 10.251.251.0/24 -o ens4 -j MASQUERADE
COMMIT
# Completed on Fri Jan 17 22:20:43 2020
# Generated by iptables-save v1.6.1 on Fri Jan 17 22:20:43 2020
*filter
:INPUT ACCEPT [20737:5128741]
:FORWARD ACCEPT [44725:11487401]
:OUTPUT ACCEPT [18917:1845220]
:sshguard - [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -j sshguard
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Fri Jan 17 22:20:43 2020
